--- a/home.html
+++ b/home.html
@@ -10,10 +10,12 @@
   <header>
     <nav>
       <ul>
-        <li><a href="#">Home</a></li>
+        <li><a href="home.html">Home</a></li>
         <li><a href="#">Shop</a></li>
         <li><a href="#">About Us</a></li>
         <li><a href="#">Contact</a></li>
+        <li><a href="login.html">Login</a></li>
+
       </ul>
     </nav>
   </header>
