--- a/login.html
+++ b/login.html
@@ -8,6 +8,18 @@
     <title>Document</title>
 </head>
 <body>
+    <header>
+        <nav>
+          <ul>
+            <li><a href="home.html">Home</a></li>
+            <li><a href="#">Shop</a></li>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Contact</a></li>
+            <li><a href="login.html">Login</a></li>
+    
+          </ul>
+        </nav>
+      </header>
     <div id="div1">
     <form action="#">
             <legend>Log in</legend>
