login and registration modified

--- a/login.html
+++ b/login.html
@@ -20,21 +20,25 @@
           </ul>
         </nav>
       </header>
-    <div id="div1">
+    <div class="center">
     <form action="#">
-            <legend>Log in</legend>
-            <label for="Username">Username: 
-            <input  type="text" type="Username"> <br>
-            </label>
-            <label for="password">password:
-            <input  type="password" type="password" > <br>
-            </label>
-            <input type="checkbox" name="Remember me" id="dad">        
-            <label for="Remember me"> Remember me?</label>
+            <h3>Log in</h3>
+            <input  type="text" name="Username" placeholder="Username"> <br>
+            <br>
+            <input  type="password" name="password" placeholder="Password"> <br>
+            <br>
+            <label for="Remember me">
+            <input type="checkbox" name="Remember me" value="remeber me">      
+            Remember me?</label><br>
+            <br>
+            <div class="button">
+            <input type="submit" name="submit" value="login">
+            </div><br>
+            <div>
+              Create account? <a href="register.html">Sign up</a>
+            </div>
     </div>
-        <div>
-            Create account? <a href="#">Sign up</a>
-        </div>
+        
     </form>
 </body>
 </html>
