--- a/home.html
+++ b/home.html
@@ -1,52 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="home.css" type="text/css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>My E-commerce Site</title>
+  <link rel="stylesheet" href="home.css"> 
+  <!-- External CSS file for styling -->
 </head>
 <body>
   <header>
+    <h1>My E-commerce Site</h1>
+    <!-- Navigation menu -->
     <nav>
       <ul>
-        <li><a href="home.html">Home</a></li>
+        <li><a href="#">Home</a></li>
         <li><a href="#">Shop</a></li>
-        <li><a href="#">About Us</a></li>
+        <li><a href="#">Cart</a></li>
         <li><a href="#">Contact</a></li>
-        <li><a href="login.html">Login</a></li>
-
       </ul>
     </nav>
   </header>
-  <section id="hero">
-    <h1>Welcome to Nishil Store</h1>
-    <p>Find your perfect phone here</p>
-    <a href="#" class="btn">Shop Now</a>
-  </section>
-  <section id="featured-phones">
-    <h2>Featured Tshirts</h2>
-    <div class="phone">
-      <img src="phone1.jpg" alt="Phone 1">
-      <h3></h3>
-      <p>$699</p>
-      <a href="#" class="btn">View Details</a>
-    </div>
-    <div class="phone">
-      <img src="phone2.jpg" alt="Phone 2">
-      <h3>Phone 2</h3>
-      <p>$799</p>
-      <a href="#" class="btn">View Details</a>
-    </div>
-    <div class="phone">
-      <img src="phone3.jpg" alt="Phone 3">
-      <h3>Phone 3</h3>
-      <p>$999</p>
-      <a href="#" class="btn">View Details</a>
-    </div>
-  </section>
+
+  <main>
+    <!-- Banner section -->
+    <section id="banner">
+      <img src="banner.jpg" alt="E-commerce banner">
+    </section>
+
+    <!-- Product listing -->
+    <section id="products">
+      <h2>Featured Products</h2>
+      <div class="product">
+        <img src="product1.jpg" alt="Product 1">
+        <h3>Product 1</h3>
+        <p>$19.99</p>
+        <button>Add to Cart</button>
+      </div>
+
+      <div class="product">
+        <img src="product2.jpg" alt="Product 2">
+        <h3>Product 2</h3>
+        <p>$24.99</p>
+        <button>Add to Cart</button>
+      </div>
+
+      <!-- Add more product listings here -->
+    </section>
+
+    <!-- Featured Categories -->
+    <section id="categories">
+      <h2>Popular Categories</h2>
+      <div class="category">
+        <img src="category1.jpg" alt="Category 1">
+        <h3>Category 1</h3>
+        <a href="#">Explore</a>
+      </div>
+
+      <div class="category">
+        <img src="category2.jpg" alt="Category 2">
+        <h3>Category 2</h3>
+        <a href="#">Explore</a>
+      </div>
+
+      <!-- Add more category listings here -->
+    </section>
+
+    <!-- Testimonials -->
+    <section id="testimonials">
+      <h2>Customer Testimonials</h2>
+      <div class="testimonial">
+        <img src="customer1.jpg" alt="Customer 1">
+        <blockquote>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum euismod ligula nec dolor pulvinar malesuada.</blockquote>
+        <cite>Customer 1</cite>
+      </div>
+
+      <div class="testimonial">
+        <img src="customer2.jpg" alt="Customer 2">
+        <blockquote>Nulla quis lectus a turpis commodo vehicula. Nam semper turpis id turpis hendrerit sollicitudin.</blockquote>
+        <cite>Customer 2</cite>
+      </div>
+
+      <!-- Add more testimonials here -->
+    </section>
+  </main>
+
   <footer>
-    <p>Copyright © 2021 Online Phone Store</p>
+    <p>&copy; 2023 Luga Pasal. All rights reserved.</p>
   </footer>
 </body>
 </html>
