--- a/home.html
+++ b/home.html
@@ -26,7 +26,7 @@
   <main>
     <!-- Banner section -->
     <section id="banner">
-      <img src="banner.jpg" alt="E-commerce banner">
+      <img src="#" alt="E-commerce banner">
     </section>
 
     <!-- Product listing -->
