--- a/register.html
+++ b/register.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="register.css">
-    <title>Document</title>
+    <title>Register</title>
 </head>
 <body>
     <header>
@@ -15,7 +15,6 @@
             <li><a href="#">Shop</a></li>
             <li><a href="#">About Us</a></li>
             <li><a href="#">Contact</a></li>
-            <li><a href="login.html">Login</a></li>
           </ul>
         </nav>
       </header>
