--- a/home.html
+++ b/home.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header>
-    <h1>My E-commerce Site</h1>
+      <h1><img src="logo.png" alt="E-commerce logo" class="logo"> My E-commerce Site</h1>
     <!-- Navigation menu -->
     <nav>
       <ul>
@@ -26,7 +26,7 @@
   <main>
     <!-- Banner section -->
     <section id="banner">
-      <img src="#" alt="E-commerce banner">
+      <img src="banner.jpg" alt="E-commerce banner">
     </section>
 
     <!-- Product listing -->
