--- a/home.html
+++ b/home.html
@@ -9,15 +9,16 @@
 </head>
 <body>
   <header>
-      <h1><img src="logo.png" alt="E-commerce logo" class="logo"> My E-commerce Site</h1>
     <!-- Navigation menu -->
+    <h1><img src="logo.png" alt="E-commerce logo" class="logo"> My E-commerce Site</h1>
+
     <nav>
       <ul>
         <li><a href="#">Home</a></li>
-        <li><a href="#">Shop</a></li>
-        <li><a href="#">Cart</a></li>
+        <li id="li1"><a href="#">Shop</a></li>
+        <li id="li2"><a href="#">Cart</a></li>
         <li><a href="#">Contact</a></li>
-        <li><a href="login.html">Login</a></li>
+        <li id="li3"><a href="login.html">Login</a></li>
 
       </ul>
     </nav>
@@ -53,13 +54,13 @@
     <section id="categories">
       <h2>Popular Categories</h2>
       <div class="category">
-        <img src="category1.jpg" alt="Category 1">
+        <img src="natural-matrioshka-ghibli-mens-tshirt.webp" alt="Category 1" class="cat1">
         <h3>Category 1</h3>
         <a href="#">Explore</a>
       </div>
 
       <div class="category">
-        <img src="category2.jpg" alt="Category 2">
+        <img src="615hZoot+ZL._SLDPMOBCAROUSELAUTOCROP288221_MCnd_AC_SR462,693_.jpg" alt="Category 2" class="cat2">
         <h3>Category 2</h3>
         <a href="#">Explore</a>
       </div>
