--- a/home.html
+++ b/home.html
@@ -9,12 +9,19 @@
 </head>
 <body>
   <header>
-      <h1><img src="logo.png" alt="E-commerce logo" class="logo"> My E-commerce Site</h1>
+      <h1> My E-commerce Site</h1>
     <!-- Navigation menu -->
     <nav>
       <ul>
-        <li><a href="#">Home</a></li>
+        <li><a href="#"><img src="logo.png" alt="E-commerce logo" class="logo"> Home</a></li>
         <li><a href="#">Shop</a></li>
+        <li><a href="#">categories</a>
+          <!-- <ul class="dropdown">
+            <li><a href="#">Men</a></li>
+            <li><a href="#">Women</a></li>
+            <li><a href="#">baby</a></li>
+          </ul> -->
+        </li>
         <li><a href="#">Cart</a></li>
         <li><a href="#">Contact</a></li>
         <li><a href="login.html">Login</a></li>
