--- a/home.html
+++ b/home.html
@@ -9,32 +9,22 @@
 </head>
 <body>
   <header>
-<<<<<<< HEAD
       <h1> My E-commerce Site</h1>
-=======
->>>>>>> 78ff181f18c8b37af9a2e152287521331c4d6abe
     <!-- Navigation menu -->
-    <h1><img src="logo.png" alt="E-commerce logo" class="logo"> My E-commerce Site</h1>
-
     <nav>
       <ul>
-<<<<<<< HEAD
-        <li><a href="#"><img src="logo.png" alt="E-commerce logo" class="logo"> Home</a></li>
-        <li><a href="#">Shop</a></li>
-        <li><a href="#">categories</a>
-          <!-- <ul class="dropdown">
-            <li><a href="#">Men</a></li>
-            <li><a href="#">Women</a></li>
-            <li><a href="#">baby</a></li>
-          </ul> -->
-        </li>
-        <li><a href="#">Cart</a></li>
-=======
-        <li><a href="#">Home</a></li>
+          <li><img src="logo.png" alt="E-commerce logo" class="logo"></li>
+          <li><a href="#"> Home</a></li>
+          <li><a href="#">Categories</a>
+              <ul>
+                  <li><a href="#">Men</a></li>
+                  <li><a href="#">Women</a></li>
+                  <li><a href="#">Baby</a></li>
+              </ul> 
+          </li>
+          <li><a href="#">Contact</a></li>
         <li id="li1"><a href="#">Shop</a></li>
         <li id="li2"><a href="#">Cart</a></li>
->>>>>>> 78ff181f18c8b37af9a2e152287521331c4d6abe
-        <li><a href="#">Contact</a></li>
         <li id="li3"><a href="login.html">Login</a></li>
 
       </ul>
