--- a/home.html
+++ b/home.html
@@ -10,9 +10,10 @@
 <body>
   <header>
     <!-- Navigation menu -->
-    <h1><img src="logo.png" alt="E-commerce logo" class="logo"> My E-commerce Site</h1>
 
     <nav>
+      <img src="logo.png" alt="E-commerce logo" class="logo"> My E-commerce Site>
+
       <ul>
         <li><a href="#">Home</a></li>
         <li id="li1"><a href="#">Shop</a></li>
@@ -31,42 +32,29 @@
     </section>
 
     <!-- Product listing -->
-    <section id="products">
       <h2>Featured Products</h2>
       <div class="product">
-        <img src="product1.jpg" alt="Product 1">
+        <img src="images.jpg">
         <h3>Product 1</h3>
         <p>$19.99</p>
         <button>Add to Cart</button>
       </div>
 
       <div class="product">
-        <img src="product2.jpg" alt="Product 2">
+        <img src="product2.jpg">
         <h3>Product 2</h3>
         <p>$24.99</p>
         <button>Add to Cart</button>
       </div>
 
       <!-- Add more product listings here -->
-    </section>
 
     <!-- Featured Categories -->
-    <section id="categories">
-      <h2>Popular Categories</h2>
-      <div class="category">
-        <img src="natural-matrioshka-ghibli-mens-tshirt.webp" alt="Category 1" class="cat1">
-        <h3>Category 1</h3>
-        <a href="#">Explore</a>
-      </div>
-
-      <div class="category">
-        <img src="615hZoot+ZL._SLDPMOBCAROUSELAUTOCROP288221_MCnd_AC_SR462,693_.jpg" alt="Category 2" class="cat2">
-        <h3>Category 2</h3>
-        <a href="#">Explore</a>
-      </div>
-
+      <!-- <h2>Popular Categories</h2>
+        <div id="div1">
+          <img src="615hZoot+ZL._SLDPMOBCAROUSELAUTOCROP288221_MCnd_AC_SR462,693_.jpg">
+        </div> -->
       <!-- Add more category listings here -->
-    </section>
 
     <!-- Testimonials -->
     <section id="testimonials">
