--- a/login.html
+++ b/login.html
@@ -13,7 +13,7 @@
           <ul>
             <li><a href="home.html">Home</a></li>
             <li><a href="#">Shop</a></li>
-            <li><a href="#">About Us</a></li>
+            <li><a href="#">Cart</a></li>
             <li><a href="#">Contact</a></li>
             <li><a href="login.html">Login</a></li>
     
